# dspy-entity-extraction

./: .gitignore  main.py  pyproject.toml
src/dspy_entity_extraction/: __init__.py  cli.py
tests/: test_cli.py  test_dspy_integration.py  test_entity_extraction.py  test_main.py
tutorial/: managing-history.ipynb
