[project]
name = "dspy-entity-extraction"
version = "0.1.0"
description = "A CLI tool for entity extraction using DSPy framework"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dspy>=3.0.3",
    "langextract>=1.0.9",
    "pytest>=8.0.0",
    "cyclopts>=3.0.0",
]

[project.scripts]
dspy-extract = "dspy_entity_extraction.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
