[project]
name = "dspy-entity-extraction"
version = "0.1.0"
description = "A CLI tool for entity extraction using DSPy framework"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dspy>=3.0.3",
    "pytest>=8.0.0",
    "cyclopts>=3.0.0",
    "ipywidgets>=8.1.7",
    "mlflow>=3.4.0",
    "python-dotenv>=1.1.1",
    "datasets>=4.1.1",
]

[project.scripts]
dspy-extract = "dspy_entity_extraction.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
required-environments = ["sys_platform == 'darwin'"]
